--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>SignDocs</title>
-    <%= csrf_meta_tags %>
+    <%= csrf_meta_tags %> 
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,100&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&family=Titillium+Web:wght@200;300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <%= stylesheet_link_tag 'application', media: 'all' %> 
+    <%= javascript_include_tag 'application' %>
   </head>
-
   <body>
     <%= yield %>
   </body>
