--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
     />
     <%= stylesheet_link_tag 'application', media: 'all' %> 
     <%= javascript_include_tag 'application' %>
+    <% if current_user %>
+        <script>
+        window.currentUser = {
+            "id": <%= current_user.id %>,
+            "username": "<%= current_user.username %>",
+            "email": "<%= current_user.email %>"
+        };
+        </script>
+    <% end %>
   </head>
   <body>
     <%= yield %>
