--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
     <% if current_user %>
         <script>
         window.currentUser = {
-            "id": <%= current_user.id %>,
-            "username": "<%= current_user.username %>",
-            "email": "<%= current_user.email %>"
+            "id": "<%= current_user.id %>",
+            "email": "<%= current_user.email %>",
+            "first_name": "<%= current_user.first_name %>",
+            "last_name": "<%= current_user.last_name %>",
         };
         </script>
     <% end %>
