--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
         window.currentUser = {
             "id": "<%= current_user.id %>",
             "email": "<%= current_user.email %>",
-            "first_name": "<%= current_user.first_name %>",
-            "last_name": "<%= current_user.last_name %>",
+            "firstName": "<%= current_user.first_name %>",
+            "lastLame": "<%= current_user.last_name %>",
         };
         </script>
     <% end %>
