--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,7 +78,7 @@ button {
   box-shadow: 0px 4px 5px 0px #c1c1c1;
 
   &:hover {
-    box-shadow: 0px 1px 3px 0px #c1c1c1;
+    background-color: var(--yellow);
   }
 
   & a {
@@ -231,10 +231,6 @@ main {
   & button.signout {
     padding: 1rem 0.5rem;
     margin: 0 0.5rem;
-
-    &:hover {
-      background-color: var(--yellow);
-    }
   }
 }
 
@@ -271,7 +267,7 @@ main {
       width: 100%;
       box-shadow: 0px 4px 5px 0px #c1c1c1;
       &:hover {
-        box-shadow: 0px 1px 3px 0px #c1c1c1;
+        // box-shadow: 0px 1px 3px 0px #c1c1c1;
         background: var(--dark-yellow);
       }
     }
