refactor(helpertext): rewrite HelperText component to accept multiple formats
Also rewrite to look up error state directly instead of accepting errors props

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -321,6 +321,10 @@ main {
   font-size: 0.8rem;
   margin: 0 1rem;
   margin: -0.75rem 0 1rem 1rem;
+
+  & p {
+    margin-bottom: -0.5rem;
+  }
 }
 
 li.no-pointer {
