--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,14 +218,14 @@ main {
   margin: auto;
 }
 
-footer {
-  background: #ffab62;
-  width: 100%;
-  height: 100px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
+// footer {
+//   background: #ffab62;
+//   width: 100%;
+//   height: 100px;
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+// }
 
 #page-container {
   position: relative;
@@ -417,6 +417,11 @@ li.no-pointer {
   align-items: baseline;
 }
 
+.flex-center {
+  justify-content: center;
+  align-items: baseline;
+}
+
 .flex-item {
   flex: 1 0;
   width: 100%;
@@ -584,6 +589,18 @@ ul.docs-index {
     & > a {
       margin: 1rem 0;
       padding: 0;
+    }
+  }
+}
+
+.small {
+  font-size: 70%;
+  & a,
+  & a:visited {
+    color: #999;
+
+    &:hover {
+      text-decoration: underline 1px dotted;
     }
   }
 }
