--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@
   --dark-yellow: #e1a205;
   --yellow-hover: #1951b8;
   --light-gray: #bebfc0;
+  --lighter-gray: #f4f4f4;
   --background-white: #fcfcfc;
   --background-white-rgb: 252, 252, 252;
   --off-black: #1e1e1e;
@@ -70,7 +71,8 @@ a {
   }
 }
 
-button {
+button,
+a.a-as-button {
   border: 0;
   border-radius: 0.25rem;
   font-size: 1rem;
@@ -144,6 +146,7 @@ header {
   -webkit-position: sticky;
   width: 100%;
   height: 80px;
+  border-bottom: 1px solid var(--lighter-gray);
 
   top: -16px; /* negative top allows for 16 pixels of movement before sticking */
   z-index: 1;
@@ -241,6 +244,7 @@ main {
   bottom: 0;
   width: 100%;
   height: 2.5rem; /* Footer height */
+  border-top: 1px solid var(--lighter-gray);
 }
 
 .nav-links {
@@ -601,6 +605,133 @@ ul.docs-index {
 
     &:hover {
       text-decoration: underline 1px dotted;
+    }
+  }
+}
+
+.index-container {
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 100%;
+  height: calc(100% - 80px - 4rem);
+}
+
+.index-sidebar {
+  // color: rgb(77, 77, 77);
+  height: 100%;
+  background-color: var(--lighter-gray);
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & a {
+    width: calc(220px - 2rem);
+    box-sizing: border-box;
+    font-size: 80%;
+    color: inherit;
+    padding: 0.5rem 1rem;
+    margin: 1rem 0 0 0;
+    text-transform: uppercase;
+    background-color: var(--yellow);
+    text-align: center;
+
+    &:hover {
+      background-color: var(--dark-yellow);
+    }
+    &:visted {
+      color: inherit;
+    }
+  }
+}
+
+.index-inbox {
+  position: fixed;
+  left: 220px;
+  top: 80px;
+  padding: 1rem 0;
+  width: 100%;
+
+  & .search-bar {
+    // height: 80px;
+  }
+
+  & h2 {
+    margin-top: 0;
+    margin-left: 1rem;
+  }
+
+  & .docs-index {
+    display: grid;
+    grid-template-columns: 50px minmax(200px, auto) 1fr 1fr minmax(100px, auto);
+    grid-auto-flow: row;
+    grid-gap: 1rem 0;
+    width: 100%;
+
+    & .docs-index-header {
+      grid-column: 1/-1;
+      border-top: 1px solid var(--lighter-gray);
+      border-bottom: 1px solid var(--lighter-gray);
+      padding: 0.5rem 0;
+      font-weight: bold;
+
+      &:nth-child(1n) {
+        padding: 0.5rem 0;
+      }
+
+      &:nth-child(1) {
+        grid-column: 1/2;
+        padding-left: 0;
+      }
+      &:nth-child(2) {
+        grid-column: 2/3;
+      }
+      &:nth-child(3) {
+        grid-column: 3/4;
+      }
+      &:nth-child(4) {
+        grid-column: 4/5;
+      }
+      &:nth-child(5) {
+        grid-column: 5/6;
+      }
+
+      & div {
+        padding: 0.5rem;
+      }
+    }
+
+    & .docs-index-subject {
+      display: flex;
+      flex-direction: column;
+      padding-right: 1rem;
+      line-height: 1.3;
+
+      & a,
+      & .docs-index-title {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        color: inherit;
+
+        &:visited {
+          color: inherit;
+        }
+        &:hover {
+          color: var(--main-blue);
+        }
+      }
+
+      & .docs-index-recipients,
+      & .docs-index-owner {
+        color: var(--light-gray);
+        font-size: 90%;
+      }
+    }
+    & > div {
+      padding: 0.5rem 0;
+      border-bottom: 1px solid var(--lighter-gray);
     }
   }
 }
