--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,18 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+  * This is a manifest file that'll be compiled into application.css, which will include all the files
+  * listed below.
+  *
+  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+  * vendor/assets/stylesheets directory can be referenced here using a relative path.
+  *
+  * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+  * files in this directory. Styles in this file should be added after the last require_* statement.
+  * It is generally better to create a new file per style scope.
+  *
+  *= require_tree .
+  *= require_self
+  */
 
 :root {
   --default-font-family: 'Roboto';
@@ -69,10 +69,6 @@ a {
   text-decoration: none;
   &.inline-link {
     margin: 0 1rem;
-  }
-
-  &:visited.inline-link {
-    // color: inherit;
   }
 }
 
@@ -131,7 +127,8 @@ label {
   }
 }
 
-input {
+input,
+textarea {
   height: 2rem;
   width: 100%;
   border-radius: 3px;
@@ -140,10 +137,11 @@ input {
   border-bottom: 1px solid #ddd;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.39), 0 -1px 1px #fff, 0 1px 0 #fff;
   padding: 0 0.5rem;
+  box-sizing: border-box;
+}
 
-  // &:invalid {
-  //   border: 1px solid red;
-  // }
+textarea {
+  resize: vertical;
 }
 
 header {
@@ -517,6 +515,8 @@ ul.docs-index {
 }
 
 .doc-show {
+  width: calc(100% - 200px);
+
   & h1,
   & h2,
   & h3 {
@@ -573,7 +573,37 @@ ul.docs-index {
   }
 
   & .doc-show-pdf-sidebar {
-    //
+    position: absolute;
+    right: 0;
+    padding: 1rem;
+    height: 100%;
+    box-sizing: border-box;
+    border-left: 1px solid var(--light-gray);
+    background-color: var(--lighter-gray);
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & div:first-child {
+      position: relative;
+
+      & img {
+        box-shadow: var(--box-shadow-1);
+      }
+
+      & div.sidebar-pagecount {
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        width: 100%;
+        padding: 0.25rem;
+        background-color: rgba(200, 200, 200, 0.4);
+        box-sizing: border-box;
+        font-size: 80%;
+        color: var(--gray);
+      }
+    }
   }
 
   & .pdf-document-container {
@@ -676,7 +706,7 @@ ul.docs-index {
   // color: rgb(77, 77, 77);
   height: 100%;
   background-color: var(--lighter-gray);
-  width: 220px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -788,5 +818,29 @@ ul.docs-index {
       padding: 0.5rem 0;
       border-bottom: 1px solid var(--lighter-gray);
     }
+  }
+}
+
+.doc-form {
+  width: 400px;
+  margin: auto;
+
+  & h1 {
+    margin: 1rem auto 0 auto;
+  }
+
+  & label {
+    margin: 1rem 0 0.5rem 0;
+  }
+
+  & textarea {
+    resize: vertical;
+    min-height: 5rem;
+    padding: 0.25rem 0.5rem;
+    line-height: 1.4;
+  }
+
+  & input[type="file"] {
+    padding: 0.5rem;
   }
 }
