--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -1,3 +1,404 @@
 // Place all the styles related to the Api/Documents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.background-gradient {
+  height: 250px;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgb(0, 91, 182);
+  background: -moz-linear-gradient(
+    45deg,
+    rgba(0, 91, 182, 1) 0%,
+    rgba(75, 154, 175, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    rgba(0, 91, 182, 1) 0%,
+    rgba(75, 154, 175, 1) 100%
+  );
+  background: linear-gradient(
+    45deg,
+    rgba(0, 91, 182, 1) 0%,
+    rgba(75, 154, 175, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#005bb6",endColorstr="#4b9aaf",GradientType=1);
+}
+
+.flex-col-container {
+  display: flex;
+  flex-direction: column;
+}
+.flex-row-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+
+.flex-between-center {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-between-baseline {
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: baseline;
+}
+
+.flex-item {
+  flex: 1 0;
+  width: 100%;
+  display: block;
+}
+
+.flex-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.flex-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.flex-item-left {
+  flex: 1;
+  text-align: left;
+}
+
+.flex-item-right {
+  flex: 1;
+  text-align: right;
+}
+
+
+.doc-show {
+  width: calc(100% - 200px);
+
+  & h1,
+  & h2,
+  & h3 {
+    margin-bottom: 0;
+  }
+
+  & .doc-show-header {
+    padding: 1rem;
+    border-bottom: 1px solid var(--light-gray);
+
+    & h2 {
+      margin: 0 0 0.5rem 0;
+    }
+
+    & p {
+      font-size: 80%;
+      margin: 0.25rem 0 0 0;
+      color: var(--gray);
+      font-weight: lighter;
+    }
+
+    & button.flat {
+      margin-left: 0;
+    }
+
+    & div:last-child {
+      margin-top: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  & .doc-show-recipients {
+    & h3 {
+      margin-bottom: 1rem;
+    }
+
+    & .doc-show-recipients-grid {
+      display: grid;
+      grid-template-columns: 50px 50px 3fr 50px 1fr;
+
+      & > div:nth-child(1n) {
+        border-bottom: 1px solid var(--light-gray);
+        padding: 1rem 0;
+      }
+
+      & .grid-row-user p {
+        margin: 0.25rem 0 0 0;
+        font-size: 80%;
+        color: var(--gray);
+      }
+    }
+  }
+
+  & .doc-show-pdf-sidebar {
+    position: absolute;
+    right: 0;
+    padding: 1rem;
+    height: calc(100% - 5.25rem);
+    box-sizing: border-box;
+    border-left: 1px solid var(--light-gray);
+    background-color: var(--lighter-gray);
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & div:first-child {
+      position: relative;
+
+      & img {
+        box-shadow: var(--box-shadow-1);
+      }
+
+      & div.sidebar-pagecount {
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        width: 100%;
+        padding: 0.25rem;
+        background-color: rgba(200, 200, 200, 0.4);
+        box-sizing: border-box;
+        font-size: 80%;
+        color: var(--gray);
+      }
+    }
+  }
+
+  & .pdf-document-container {
+    & .pages-buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: baseline;
+    }
+
+    & .card {
+      height: 792px;
+      width: 612px;
+      display: block;
+      user-select: none;
+      z-index: -1;
+      border: 1px solid #ddd;
+      border-radius: 0;
+      box-shadow: 0px 1px 2px 0px #ccc;
+    }
+
+    & .react-pdf__Document {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
+
+      & .react-pdf__Page {
+        border: 1px solid #ddd;
+        border-radius: 0;
+        box-shadow: 0px 1px 2px 0px #ccc;
+      }
+    }
+  }
+
+  & .doc-attr-key {
+    min-width: 200px;
+    max-width: 200px;
+    margin: 0 2rem;
+  }
+
+  & .doc-details-grid {
+    display: grid;
+    grid-template-columns: 200px auto 1fr;
+    gap: 1rem;
+    justify-content: center;
+
+    & > * {
+      margin-top: 0;
+    }
+
+    & .doc-attr-key {
+      min-width: 200px;
+      text-align: right;
+    }
+
+    & .doc-attr-value {
+      grid-column: 2/-1;
+    }
+  }
+
+  & .doc-button-bar,
+  & .doc-details-title-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+
+  & .doc-button-bar {
+    & > button,
+    & > a {
+      margin: 1rem 0;
+      padding: 0;
+    }
+  }
+}
+
+
+.index-container {
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 100%;
+  height: calc(100% - 80px - 4rem);
+}
+
+.index-sidebar {
+  // color: rgb(77, 77, 77);
+  height: 100%;
+  background-color: var(--lighter-gray);
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & a {
+    width: calc(220px - 2rem);
+    box-sizing: border-box;
+    font-size: 80%;
+    color: inherit;
+    padding: 0.5rem 1rem;
+    margin: 1rem 0 0 0;
+    text-transform: uppercase;
+    background-color: var(--yellow);
+    text-align: center;
+
+    &:hover {
+      background-color: var(--dark-yellow);
+    }
+    &:visted {
+      color: inherit;
+    }
+  }
+}
+
+.index-inbox {
+  position: fixed;
+  left: 220px;
+  top: 80px;
+  padding: 1rem 0;
+  width: 100%;
+
+  & .search-bar {
+    max-height: 80px;
+  }
+
+  & h2 {
+    margin-top: 0;
+    margin-left: 1rem;
+  }
+
+  & .docs-index {
+    display: grid;
+    grid-template-columns: 50px minmax(200px, auto) 1fr 1fr minmax(100px, auto);
+    grid-auto-flow: row;
+    grid-gap: 1rem 0;
+    width: 100%;
+
+    & .docs-index-header {
+      grid-column: 1/-1;
+      border-top: 1px solid var(--lighter-gray);
+      border-bottom: 1px solid var(--lighter-gray);
+      padding: 0.5rem 0;
+      font-weight: bold;
+
+      &:nth-child(1n) {
+        padding: 0.5rem 0;
+      }
+
+      &:nth-child(1) {
+        grid-column: 1/2;
+        padding-left: 0;
+      }
+      &:nth-child(2) {
+        grid-column: 2/3;
+      }
+      &:nth-child(3) {
+        grid-column: 3/4;
+      }
+      &:nth-child(4) {
+        grid-column: 4/5;
+      }
+      &:nth-child(5) {
+        grid-column: 5/6;
+      }
+
+      & div {
+        padding: 0.5rem;
+      }
+    }
+
+    & .docs-index-subject {
+      display: flex;
+      flex-direction: column;
+      padding-right: 1rem;
+      line-height: 1.3;
+
+      & a,
+      & .docs-index-title {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        color: inherit;
+
+        &:visited {
+          color: inherit;
+        }
+        &:hover {
+          color: var(--main-blue);
+        }
+      }
+
+      & .docs-index-recipients,
+      & .docs-index-owner {
+        color: var(--light-gray);
+        font-size: 90%;
+      }
+    }
+    & > div {
+      padding: 0.5rem 0;
+      border-bottom: 1px solid var(--lighter-gray);
+    }
+  }
+}
+
+.doc-form {
+  width: 400px;
+  margin: auto;
+
+  & h1 {
+    margin: 1rem auto 0 auto;
+  }
+
+  & label {
+    margin: 1rem 0 0.5rem 0;
+  }
+
+  & textarea {
+    resize: vertical;
+    min-height: 5rem;
+    padding: 0.25rem 0.5rem;
+    line-height: 1.4;
+  }
+
+  & input[type="file"] {
+    padding: 0.5rem;
+  }
+}
