--- a/app/assets/stylesheets/api/signature_blocks.scss
+++ b/app/assets/stylesheets/api/signature_blocks.scss
@@ -1,3 +1,62 @@
 // Place all the styles related to the Api/SignatureBlocks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.signature {
+  .sigCanvas {
+    border: 1px solid gray;
+    box-shadow: var(--box-shadow-1);
+  }
+
+  .button-bar button {
+    width: 15px;
+    height: 15px;
+    padding: 0;
+    border-radius: 50%;
+    border: 1px solid darkgrey;
+    box-shadow: var(--box-shadow-1);
+
+    &.black {
+      background-color: var(--off-black);
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+    &.darkslategray {
+      background-color: darkslategray;
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+    &.darkgreen {
+      background-color: darkgreen;
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+    &.midnightblue {
+      background-color: midnightblue;
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+    &.royalblue {
+      background-color: royalblue;
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+    &.teal {
+      background-color: teal;
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+
+    &.current {
+      box-shadow: 2px 2px 15px 1px var(--yellow), -2px -2px 10px 1px var(--yellow);
+      opacity: 1;
+
+    }
+  }
+}
