--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,7 @@
     <title>SignDocs</title>
     <%= csrf_meta_tags %> 
     <%= csp_meta_tag %>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,100&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&family=Titillium+Web:wght@200;300;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Dancing+Script:wght@400;700&family=Homemade+Apple&family=Permanent+Marker&family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,100&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Rock+Salt&family=Titillium+Web:wght@200;300;400;700&display=swap" rel="stylesheet"> 
     <%= favicon_link_tag asset_path('apple-touch-icon.png') %>
     <%= favicon_link_tag asset_path('favicon-32x32.png') %>
     <%= favicon_link_tag asset_path('favicon-16x16.png') %>
