--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,8 @@
   --lighter-gray: #f4f4f4;
   --background-white: #fcfcfc;
   --background-white-rgb: 252, 252, 252;
-  --off-black: #1e1e1e;
+  // --off-black: #1e1e1e;
+  --off-black: #000028;
   --box-shadow-1: 0px 3px 4px -1px var(--gray);
   --rounded-corners: 4px;
 }
