Add Modal reducer and groundwork

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,7 @@
   --background-white-rgb: 252, 252, 252;
   // --off-black: #1e1e1e;
   --off-black: #000028;
+  --off-black-rgb: 0, 0, 40;
   --box-shadow-1: 0px 3px 4px -1px var(--gray);
   --rounded-corners: 4px;
 }
@@ -356,4 +357,21 @@ li.no-pointer {
       text-decoration: underline 1px dotted;
     }
   }
+}
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(var(--off-black-rgb), 0.7);
+  z-index: 10;
+}
+
+.modal-child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
