--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,18 @@
     <%= stylesheet_link_tag 'application', media: 'all' %> 
     <%= javascript_include_tag 'application' %>
     <% if current_user %>
+        <!-- TODO: Fix preloadedState using Ruby partial -->
         <script>
-        window.currentUser = {
-            "id": "<%= current_user.id %>",
-            "email": "<%= current_user.email %>",
-            "firstName": "<%= current_user.first_name %>",
-            "lastLame": "<%= current_user.last_name %>",
-        };
+            window.currentUser = {
+                id: "<%= current_user.id %>",
+                firstName: "<%= current_user.first_name %>",
+                lastName: "<%= current_user.last_name %>",
+                email: "<%= current_user.email %>",
+                sigId: "<%= current_user.signature.id %>",
+                <% if current_user.avatar.attached? %>
+                    imageTag: "<%= polymorphic_url(current_user.avatar)  %>",
+                <% end %>
+            };
         </script>
     <% end %>
   </head>
